# trouble_sci

./: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: ble.rs  gatt.rs  main.rs  nrf.rs
